--- a/Scalar.UnitTests/Scalar.UnitTests.csproj
+++ b/Scalar.UnitTests/Scalar.UnitTests.csproj
@@ -1,59 +1,32 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\Scalar.Build\Scalar.cs.props" />
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Platforms>x64</Platforms>
-    <GenerateProgramFile>false</GenerateProgramFile>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-    <RuntimeIdentifiers>win-x64;osx-x64</RuntimeIdentifiers>
-  </PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <RootNamespace>Scalar.UnitTests</RootNamespace>
-    <AssemblyName>Scalar.UnitTests</AssemblyName>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>false</IsPackable>
+    <IsPublishable>false</IsPublishable>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <Version>$(ScalarVersion)</Version>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <Version>$(ScalarVersion)</Version>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="Data\backward.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Data\caseChange.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Data\forward.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Data\index_v4">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.SDK" Version="15.0.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
-    <PackageReference Include="NuGet.Protocol" Version="4.9.2" />
-    <PackageReference Include="NuGet.Versioning" Version="4.9.2" />
-    <PackageReference Include="NUnitLite" Version="3.12.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Scalar.Common\Scalar.Common.csproj" />
-    <ProjectReference Include="..\Scalar.Platform.Mac\Scalar.Platform.Mac.csproj" />
-    <ProjectReference Include="..\Scalar.Service\Scalar.Service.Mac.csproj" />
-    <ProjectReference Include="..\Scalar.Tests\Scalar.Tests.csproj" />
+    <ProjectReference Include="..\Scalar.Service\Scalar.Service.csproj" />
+    <ProjectReference Include="..\Scalar.Service.UI\Scalar.Service.UI.csproj" />
+    <ProjectReference Include="..\Scalar.TestInfrastructure\Scalar.TestInfrastructure.csproj" />
     <ProjectReference Include="..\Scalar.Upgrader\Scalar.Upgrader.csproj" />
+    <ProjectReference Include="..\Scalar\Scalar.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.13.0" />
+    <PackageReference Include="nunit" Version="3.11.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Data\**" />
+    <Content Include="Data\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
