Publish trace2 logs only on failure
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.azure-pipelines/templates/windows-functional-test.yml
+++ b/.azure-pipelines/templates/windows-functional-test.yml
@@ -32,3 +32,4 @@ steps:
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)'
       artifactName: trace2-event-windows.txt
+    condition: failed()
