maintenance: move maintenance task management to service
Previously, Scalar maintenance tasks were performed in the
Scalar.Mount process.  As a step toward completely removing
the mount process (and its associated verbs) the changes in
this commit move the scheduling and calling of maintenance
tasks into the service.

The service runs the maintenance tasks by way of the
'scalar maintenance' verb, and it does so for all of the
that the current user has registered.

With this change the 'mount' and 'unmount' verbs serve only
to register and unregister the repo with the service.
Deprecation of these verbs, as well as the mount process itself,
will be performed in a subsequent patch series.

--- a/Scalar.Service/Scalar.Service.Windows.csproj
+++ b/Scalar.Service/Scalar.Service.Windows.csproj
@@ -56,10 +56,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
-    <Compile Include="ScalarMountProcess.Windows.cs" />
+    <Compile Include="IServiceTask.cs" />
+    <Compile Include="MaintenanceTaskScheduler.cs" />
+    <Compile Include="ScalarVerbRunner.Windows.cs" />
     <Compile Include="ScalarService.Windows.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ServiceTaskQueue.cs" />
     <Compile Include="Handlers\INotificationHandler.cs" />
     <Compile Include="Handlers\MessageHandler.cs" />
     <Compile Include="Handlers\GetActiveRepoListHandler.cs" />
@@ -67,7 +70,7 @@
     <Compile Include="Handlers\RequestHandler.cs" />
     <Compile Include="Handlers\UnregisterRepoHandler.cs" />
     <Compile Include="Handlers\RegisterRepoHandler.cs" />
-    <Compile Include="IRepoMounter.cs" />
+    <Compile Include="IScalarVerbRunner.cs" />
     <Compile Include="IRepoRegistry.cs" />
     <Compile Include="ProductUpgradeTimer.cs" />
     <Compile Include="Program.Windows.cs" />
