--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -36,6 +36,7 @@
     <Compile Include="RepoRegistration.cs" />
     <Compile Include="RepoRegistry.cs" />
     <Compile Include="MaintenanceTaskScheduler.cs" />
+    <Compile Include="MaintenanceTaskRunner.cs" />
   </ItemGroup>
   
   <ItemGroup>
