--- a/Scalar.Service/Scalar.Service.Windows.csproj
+++ b/Scalar.Service/Scalar.Service.Windows.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="$(SolutionDir)\Scalar.Build\Scalar.cs.props" />
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="MaintenanceTaskRunner.cs" />
+    <Compile Include="MaintenanceTaskScheduler.cs" />
     <Compile Include="ScalarVerb.Windows.cs" />
     <Compile Include="ScalarService.Windows.cs">
       <SubType>Component</SubType>
