--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <Compile Include="..\Scalar.PlatformLoader\PlatformLoader.Mac.cs" Link="Mac\PlatformLoader.Mac.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="ScalarVerb.Mac.cs" />
+    <Compile Include="ScalarVerbRunner.Mac.cs" />
     <Compile Include="ScalarService.Mac.cs" />
     <Compile Include="Handlers\INotificationHandler.cs" />
     <Compile Include="Handlers\NotificationHandler.Mac.cs" />
@@ -30,7 +30,7 @@
     <Compile Include="Handlers\MessageHandler.cs" />
     <Compile Include="Handlers\RegisterRepoHandler.cs" />
     <Compile Include="Handlers\UnregisterRepoHandler.cs" />
-    <Compile Include="IScalarVerb.cs" />
+    <Compile Include="IScalarVerbRunner.cs" />
     <Compile Include="IRepoRegistry.cs" />
     <Compile Include="Program.Mac.cs" />
     <Compile Include="RepoRegistration.cs" />
