Switch to using a more generic ServiceTaskRunner

--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -36,7 +36,8 @@
     <Compile Include="RepoRegistration.cs" />
     <Compile Include="RepoRegistry.cs" />
     <Compile Include="MaintenanceTaskScheduler.cs" />
-    <Compile Include="MaintenanceTaskRunner.cs" />
+    <Compile Include="ServiceTaskRunner.cs" />
+    <Compile Include="ServiceTask.cs" />
   </ItemGroup>
   
   <ItemGroup>
