--- a/.azure-pipelines/templates/windows-build-and-unit-test.yml
+++ b/.azure-pipelines/templates/windows-build-and-unit-test.yml
@@ -1,5 +1,11 @@
 steps:
 
+  - task: UseDotNet@2
+    displayName: Use .NET Core SDK 3.0.100
+    inputs:
+      packageType: sdk
+      version: 3.0.100
+
   - script: $(Build.Repository.LocalPath)\\Scripts\\NukeBuildOutputs.bat
     displayName: Delete previous build outputs
     continueOnError: true
@@ -10,25 +16,25 @@ steps:
     displayName: Disable strong name validation for MS delay-signed assemblies
 
   - script: $(Build.Repository.LocalPath)\Scripts\BuildScalarForWindows.bat $(configuration) $(majorAndMinorVersion).$(revision)
-    displayName: Run Scalar build script ($(configuration))
+    displayName: Build Scalar ($(configuration))
 
-  - script: $(Build.Repository.LocalPath)\Scripts\RunUnitTests.bat $(configuration)
-    displayName: Run unit tests
+  - script: $(Build.Repository.LocalPath)\Scripts\RunUnitTests.bat $(configuration) $(Common.TestResultsDirectory)
+    displayName: Run unit tests ($(configuration))
 
   - task: PublishTestResults@2
     displayName: Publish unit test results
     inputs:
-      testRunner: NUnit
-      testResultsFiles: "**\\TestResult.xml"
-      searchFolder: $(System.DefaultWorkingDirectory)
+      testRunner: VSTest
+      testResultsFiles: "**\\*.trx"
+      searchFolder: $(Common.TestResultsDirectory)
       testRunTitle: Windows $(configuration) Unit Tests
       publishRunAttachments: true
 
-  - script: $(Build.Repository.LocalPath)\Scripts\CI\CreateBuildDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Tests
-    displayName: Create functional test drop
+  - script: $(Build.Repository.LocalPath)\Scripts\CI\CreateFTDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Tests
+    displayName: Create functional tests drop
 
   - task: PublishBuildArtifacts@1
-    displayName: Publish functional test drop
+    displayName: Publish functional tests drop
     inputs:
       pathtoPublish: $(Build.ArtifactStagingDirectory)\Tests
       artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
@@ -37,10 +43,10 @@ steps:
     condition: and(succeeded(), eq(variables['configuration'], 'Release'))
 
   - script: $(Build.Repository.LocalPath)\Scripts\CI\CreateInstallerDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Installers
-    displayName: Create installer drop
+    displayName: Create installers drop
 
   - task: PublishBuildArtifacts@1
-    displayName: Publish installers
+    displayName: Publish installers drop
     inputs:
       pathToPublish: $(Build.ArtifactStagingDirectory)\Installers
       artifactName: "Installers_$(platformFriendlyName)_$(configuration)"
