Switch back to using a queue to manage maintenance tasks

--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -36,7 +36,7 @@
     <Compile Include="RepoRegistration.cs" />
     <Compile Include="RepoRegistry.cs" />
     <Compile Include="MaintenanceTaskScheduler.cs" />
-    <Compile Include="ServiceTaskRunner.cs" />
+    <Compile Include="ServiceTaskQueue.cs" />
     <Compile Include="ServiceTask.cs" />
   </ItemGroup>
   
