--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -37,7 +37,7 @@
     <Compile Include="RepoRegistry.cs" />
     <Compile Include="MaintenanceTaskScheduler.cs" />
     <Compile Include="ServiceTaskQueue.cs" />
-    <Compile Include="ServiceTask.cs" />
+    <Compile Include="IServiceTask.cs" />
   </ItemGroup>
   
   <ItemGroup>
