scalar maintenance: simplify maintenance task management
- Add a new IRegisteredUserStore and implement it with the
  MaintenanceTaskSchedule to avoid having to create/pass
  a Func to the maintenance task.

- Remove the unnecessary lock from the ServiceTaskQueue

- Simplify the creation of the timers in MaintenanceTaskScheduler

--- a/Scalar.Service/Scalar.Service.Mac.csproj
+++ b/Scalar.Service/Scalar.Service.Mac.csproj
@@ -38,6 +38,8 @@
     <Compile Include="MaintenanceTaskScheduler.cs" />
     <Compile Include="ServiceTaskQueue.cs" />
     <Compile Include="IServiceTask.cs" />
+    <Compile Include="IRegisteredUserStore.cs" />
+    <Compile Include="UserAndSession.cs" />
   </ItemGroup>
   
   <ItemGroup>
