--- a/Scalar.Distribution.Mac/Scalar.Distribution.Mac.csproj
+++ b/Scalar.Distribution.Mac/Scalar.Distribution.Mac.csproj
@@ -3,30 +3,35 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <DistributionOutputPath>$(ProjectOutPath)dist\$(Configuration)\</DistributionOutputPath>
+    <GcmCoreReleaseTag>v2.0.79-beta</GcmCoreReleaseTag>
+    <GcmCorePackageFilename>gcmcore-osx-2.0.79.64449.pkg</GcmCorePackageFilename>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Scalar.Installer.Mac\Scalar.Installer.Mac.csproj" ReferenceOutputAssembly="false" Private="false" />
     <PackageReference Include="GitForMac.GVFS.Installer" />
-    <GitHubAssetReference Include="microsoft/Git-Credential-Manager-Core" Version="v2.0.79-beta" Filter=".*\.pkg" PropertyName="GcmCoreAssets" />
   </ItemGroup>
 
   <Target Name="BuildDistribution" AfterTargets="Publish" Condition="'$(OSPlatform)' == 'osx'">
+    <!-- Download GCM Core -->
+    <DownloadFile DestinationFolder="$(DistributionOutputPath)\GCM"
+                  SourceUrl="https://github.com/microsoft/Git-Credential-Manager-Core/releases/download/$(GcmCoreReleaseTag)/$(GcmCorePackageFilename)"
+                  SkipUnchangedFiles="true" />
+
+    <!-- Copy Scalar and Git packages to distribution output directory -->
     <ItemGroup>
       <ScalarPackage  Include="$(RepoOutPath)Scalar.Installer.Mac\installer\$(Configuration)\*.pkg" LinkBase="Scalar" />
       <GitPackage     Include="$(PkgGitForMac_GVFS_Installer)\tools\*.pkg"                          LinkBase="Git" />
-      <GcmCorePackage Include="$(GcmCoreAssets)\*.pkg"                                              LinkBase="GCM" />
     </ItemGroup>
-    <Copy SourceFiles="@(ScalarPackage);@(GitPackage);@(GcmCorePackage)"
+    <Copy SourceFiles="@(ScalarPackage);@(GitPackage)"
           DestinationFolder="$(DistributionOutputPath)%(LinkBase)"
           SkipUnchangedFiles="true" />
 
+    <!-- Generate installation script -->
     <PropertyGroup>
       <ScalarPackageFilename>%(ScalarPackage.Filename)%(ScalarPackage.Extension)</ScalarPackageFilename>
       <GitPackageFilename>%(GitPackage.Filename)%(GitPackage.Extension)</GitPackageFilename>
-      <GcmCorePackageFilename>%(GcmCorePackage.Filename)%(GcmCorePackage.Extension)</GcmCorePackageFilename>
     </PropertyGroup>
-
     <ItemGroup>
       <ScriptTemplate Include="InstallScalar.template.sh" TargetPath="InstallScalar.sh"
                       Properties="##SCALAR_INSTALLER_PKG_PLACEHOLDER##=$(ScalarPackageFilename);
