scalar: allow full build without publish args
Allow a full build including the distribution projects using only the
`dotnet publish` command without any arguments. Previously this
required the `--runtime <RID>` argument.

The `Scalar.Distribution.*` projects now invoke the 'Publish' target on
all dependent projects with the correct RID and configuration.

--- a/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
+++ b/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
@@ -18,9 +18,20 @@
     <ProjectReference Include="..\Scalar.Notifications.Mac\Scalar.Notifications.Mac.csproj" />
   </ItemGroup>
 
-  <!-- Only create the installer on 'publish' and when running on macOS -->
-  <Target Name="PublishInstaller" AfterTargets="Publish" Condition="'$(OSPlatform)' == 'osx'" >
+  <!-- Only create the installer when running on macOS -->
+  <Target Name="BuildInstaller" AfterTargets="Publish" Condition="'$(OSPlatform)' == 'osx'" >
+    <!-- Ensure all projects have been published with the correct runtime identifier and configuration -->
+    <MSBuild Projects="@(ProjectReference)"
+             Targets="Publish"
+             Properties="
+             Configuration=$(Configuration);
+             RuntimeIdentifier=$(RuntimeIdentifier);"
+             BuildInParallel="true" />
+
+    <!-- Bring together all published binaries and native applications/plists -->
     <Exec Command="$(MSBuildProjectDirectory)/layout.sh '$(Configuration)' '$(TargetFramework)' '$(RuntimeIdentifier)' '$(RepoSrcPath)' '$(RepoOutPath)' '$(LayoutPath)'"/>
+
+    <!-- Build the installer package(s) -->
     <Exec Command="$(MSBuildProjectDirectory)/pack.sh '$(ScalarVersion)' '$(RepoSrcPath)' '$(LayoutPath)' '$(InstallerOutputPath)'"/>
   </Target>
 
