Run functional tests with Watchman on Windows
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -88,3 +88,20 @@ jobs:
     steps:
     - checkout: none # We'll get the build drop from Windows_Build_and_UnitTests job
     - template: templates/windows-functional-test.yml
+      parameters:
+        useWatchman: false
+
+  - job: Windows_FunctionalTests_watchman
+    timeoutInMinutes: 30
+    variables:
+      platformFriendlyName: Windows
+      configuration: Release
+    pool:
+      vmImage: windows-2019
+    dependsOn: Windows_Build_and_UnitTests
+    condition: succeeded()
+    steps:
+    - checkout: none # We'll get the build drop from Windows_Build_and_UnitTests job
+    - template: templates/windows-functional-test.yml
+      parameters:
+        useWatchman: true
