--- a/.azure-pipelines/templates/windows-functional-test.yml
+++ b/.azure-pipelines/templates/windows-functional-test.yml
@@ -1,3 +1,6 @@
+parameters:
+  useWatchman: true
+
 steps:
 
   - task: NuGetToolInstaller@0
@@ -26,8 +29,13 @@ steps:
       artifactName: Installers_$(platformFriendlyName)_$(configuration)
       downloadPath: $(Build.BinariesDirectory)
 
-  - script: $(Build.BinariesDirectory)/Installers_$(platformFriendlyName)_$(configuration)/InstallScalar.bat $(Build.ArtifactStagingDirectory)\logs
-    displayName: Install product
+  - ${{ if eq(parameters.useWatchman, 'true') }}:
+    - script: $(Build.BinariesDirectory)/Installers_$(platformFriendlyName)_$(configuration)/InstallScalar.bat --watchman $(Build.ArtifactStagingDirectory)\logs
+      displayName: Install product (with watchman)
+
+  - ${{ if eq(parameters.useWatchman, 'false') }}:
+    - script: $(Build.BinariesDirectory)/Installers_$(platformFriendlyName)_$(configuration)/InstallScalar.bat --no-watchman $(Build.ArtifactStagingDirectory)\logs
+      displayName: Install product (without watchman)
 
   - script: git config --global credential.interactive never
     displayName: Disable interactive auth
@@ -35,19 +43,40 @@ steps:
   - script: $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/src/Scripts/RunFunctionalTests.bat $(configuration) --test-scalar-on-path "--trace2-output=$(Build.ArtifactStagingDirectory)\logs\trace2-event.log"
     displayName: Run functional tests
 
-  - task: PublishTestResults@2
-    displayName: Publish functional tests results
-    inputs:
-      testRunner: NUnit
-      testResultsFiles: "**\\TestResult*.xml"
-      searchFolder: $(System.DefaultWorkingDirectory)
-      testRunTitle: Windows $(configuration) Functional Tests
-      publishRunAttachments: true
-    condition: succeededOrFailed()
+  - ${{ if eq(parameters.useWatchman, 'true') }}:
+    - task: PublishTestResults@2
+      displayName: Publish functional tests results
+      inputs:
+        testRunner: NUnit
+        testResultsFiles: "**\\TestResult*.xml"
+        searchFolder: $(System.DefaultWorkingDirectory)
+        testRunTitle: Windows $(configuration) Functional Tests (with watchman)
+        publishRunAttachments: true
+      condition: succeededOrFailed()
 
-  - task: PublishBuildArtifacts@1
-    displayName: Publish test and installation logs
-    inputs:
-      pathtoPublish: '$(Build.ArtifactStagingDirectory)\logs'
-      artifactName: Logs_$(platformFriendlyName)
-    condition: failed()
+  - ${{ if eq(parameters.useWatchman, 'true') }}:
+    - task: PublishBuildArtifacts@1
+      displayName: Publish test and installation logs
+      inputs:
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)\logs'
+        artifactName: Logs_$(platformFriendlyName)_Watchman
+      condition: failed()
+
+  - ${{ if eq(parameters.useWatchman, 'false') }}:
+    - task: PublishTestResults@2
+      displayName: Publish functional tests results
+      inputs:
+        testRunner: NUnit
+        testResultsFiles: "**\\TestResult*.xml"
+        searchFolder: $(System.DefaultWorkingDirectory)
+        testRunTitle: Windows $(configuration) Functional Tests (without watchman)
+        publishRunAttachments: true
+      condition: succeededOrFailed()
+
+  - ${{ if eq(parameters.useWatchman, 'false') }}:
+    - task: PublishBuildArtifacts@1
+      displayName: Publish test and installation logs
+      inputs:
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)\logs'
+        artifactName: Logs_$(platformFriendlyName)
+      condition: failed()
